--- a/composer.json
+++ b/composer.json
@@ -53,12 +53,14 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Dom\\": "domain/src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Tests\\": "tests/",
+            "Dom\\Tests\\": "domain/tests/"
         }
     },
     "replace": {
