--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,9 @@
 controllers:
     resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+        path: ../src/UserInterface/Controller/
+        namespace: App\UserInterface\Controller
     type: attribute
+    
+# index:
+#     path: /
+#     controller: App\UserInterface\Controller\HomeController
