--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,9 +16,14 @@ services:
     App\:
         resource: '../src/'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
+            - '../src/DependencyInjection/'  
             - '../src/Kernel.php'
-
+            - '../src/Infrastructure/Entity/'
+    Dom\:
+        resource: '../domain/src/'
+        
+    App\UserInterface\Controller\:
+        resource: '../src/UserInterface/Controller'
+        tags: ['controller.service_arguments']        
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
